--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,4 @@
+/* general tiloedit */
 html {font-family: Georgia, 'Times New Roman', Times, serif; font-size: 14pt; font-weight: 300; line-height: 1.8rem; color: #111;}
 * {padding:0; margin:0;}
 body {background: #eee; margin: 1em;}
