--- a/css/layout.css
+++ b/css/layout.css
@@ -24,9 +24,13 @@ nav ul li.active a {color: #fff;}
 
 /* ist flex-item from #content and flexes 3 section.recipes */
 main {flex: 5; order: 2; display: flex; flex-flow: row wrap; justify-content: flex-start; padding: 1em;}
-main section.recipe {flex: 1 1 auto; width: 31%; box-sizing: border-box; border: 1px solid #666; margin: 0.5rem; padding: 1rem; border-radius: 0.5rem; 
+/* ist flex-item from main and flexes img, h3, p, a */
+main section.recipe {flex: 1 1 auto; display: flex; flex-flow: column nowrap; justify-content: space-around; width: 31%; box-sizing: border-box; border: 1px solid #666; margin: 0.5rem; padding: 1rem; border-radius: 0.5rem; 
     box-shadow: 2px 2px 1px #666;}
-main section.recipe img {width: 100%; height: auto;}
+main section.recipe img {flex: 0 1 auto; width: 100%; height: auto;}
+main section.recipe p {flex: 1 0 auto;}
+main section.recipe a {border: 2px inset #fff; background-color: #444; border-radius: 5px; padding: 0.1rem 0.5rem; 
+    text-align: center; font-size: 0.8rem; text-decoration: none; color: #fff; margin: 1rem 2rem;}
 
 /* Hamburger menu */
 /* Placeholder */
